benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_iter4_error.log
=== Verification Error - Iteration 4 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes.rs
Time: 2025-09-15 19:29:39

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:28:39
   |
28 |   if exp == 0 { 1 } else { 2 * power2(exp - 1) }
   |                                ------ ^^^^^^^ expected `nat`, found `int`
   |                                |
   |                                arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:25:9
   |
25 | spec fn power2(exp: nat) -> nat
   |         ^^^^^^ --------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:52:10
   |
32 | exec fn str_to_nat(s: &[char]) -> nat
   |                                   --- expected `vstd::prelude::nat` because of return type
...
52 |   return res;
   |          ^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:61:11
   |
61 |   if n == 0 {
   |      -    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:37
   |
66 |     let mut res = nat_to_binary(n / 2);
   |                                 -   ^ expected `nat`, found integer
   |                                 |
   |                                 expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:12
   |
67 |     if n % 2 == 0 {
   |        -   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:17
   |
67 |     if n % 2 == 0 {
   |        -----    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:28:39
   |
28 |   if exp == 0 { 1 } else { 2 * power2(exp - 1) }
   |                                ------ ^^^^^^^ expected `nat`, found `int`
   |                                |
   |                                arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:25:9
   |
25 | spec fn power2(exp: nat) -> nat
   |         ^^^^^^ --------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:52:10
   |
32 | exec fn str_to_nat(s: &[char]) -> nat
   |                                   --- expected `vstd::prelude::nat` because of return type
...
52 |   return res;
   |          ^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:61:11
   |
61 |   if n == 0 {
   |      -    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:37
   |
66 |     let mut res = nat_to_binary(n / 2);
   |                                 -   ^ expected `nat`, found integer
   |                                 |
   |                                 expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:12
   |
67 |     if n % 2 == 0 {
   |        -   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:17
   |
67 |     if n % 2 == 0 {
   |        -----    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
